2008-10-19  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* ext/apexsink/gstapexplugin.c: (plugin_init):
	  Set apexsink's rank to NONE so it doesn't get used by
	  autoaudiosink (there's no point really). (#556588)

2008-10-16  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	0.10.8.3 pre-release

2008-10-16  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	Patch by: Josep Torra

	* gst/mpegdemux/gstmpegtsdemux.c:
	* gst/mpegdemux/gstmpegtsdemux.h:
	Properly handle some resync cases in the optimised
	buffering strategy.

2008-10-16  Michael Smith <msmith@songbirdnest.com>
	* sys/acmenc/Makefile.am:
	  Remove incorrect use of DIRECTSOUND_LDFLAGS

2008-10-16  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/flv/gstflvmux.c: (gst_flv_mux_audio_pad_setcaps),
	(gst_flv_mux_write_buffer):
	Don't set video_codec to the value that actually should go
	into audio codec, otherwise we create invalid files.
	Fixes bug #556564.

2008-10-16  Jan Schmidt  <jan.schmidt@sun.com>

	* tests/check/Makefile.am:
	Leave apexsink out of the states test.

2008-10-16  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtpmanager/gstrtpjitterbuffer.c:
	(gst_jitter_buffer_sink_parse_caps),
	(gst_rtp_jitter_buffer_flush_start),
	(gst_rtp_jitter_buffer_flush_stop), (gst_rtp_jitter_buffer_chain),
	(gst_rtp_jitter_buffer_loop):
	Fix problem with using the output seqnum counter to check for input
	seqnum discontinuities.
	Improve gap detection and recovery, reset and flush the jitterbuffer on
	seqnum restart. Fixes #556520.

	* gst/rtpmanager/rtpjitterbuffer.c: (rtp_jitter_buffer_insert):
	Fix wrong G_LIKELY.

2008-10-16  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	Commit 0.10.8.2 pre-release bump, that actually went out in a
	tarball on 2008-10-11

2008-10-16  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtpmanager/gstrtpsession.c:
	(gst_rtp_session_event_send_rtcp_src), (create_send_rtcp_src):